lldpd (0.5.1)
  * Features:
    + Allow to force a protocol even when no peer for this protocol is
      detected.
    + Allow to set LLDP-MED network policy from lldpctl, thanks to a patch from
      Philipp Kempgen.
    + Allow to set LLDP-MED POE-MDI from lldpctl.
    + Add a summary of available options in "lldpd -h" and "lldpctl -h",
      thanks to a patch from Jorge Boncompte.
    + Add a new output (keyvalue) for lldpctl.
    + Listen on VLAN using an appropriate BPF filter, VLAN
      decapsulation. Older "listen on vlan" feature is discarded. See
      README for more information on the new feature.
    + Use output of lsb_release if available for system description.

  * Fixes:
    + Ignore interface with no queue. It should filter out interfaces
      like "vnet0" that would fail if we try to send something on them.
    + Don't check CDP checksums (not really a fix but it appears that
      Cisco checksum have some difficult corner cases).

lldpd (0.5.0)

  * Features:
    + lldpd can now handle several systems on the same port. This
      modification also allows to speak to a switch using CDP and LLDP
      for example.
    + The way that lldpd gathers information for each port has been
      abstracted. This should allow to support more systems (BSD for
      examples) or switch cores in the future. Sending/receive support
      is also abstracted.
    + Add "-k" switch to avoid to emit too much information on running
      kernel.
    + Support of ifAlias with kernel >= 2.6.28
    + Lot of portability stuff. lldpd can now be compiled on RHEL
      2.1. Still Linux-only though.
    + Add an option to specify AgentX socket (-X).
    + Add some unit tests
    + lldpctl has been reworked; it is now able to output data in XML
      format for easier parsing. Patches were provided by Andreas
      Hofmeister.

  * Bug fixes:
    + Fix EDP VLAN handling
    + Silent warnings about bridge stuff.